Thu Dec 02 13:36:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/tds/unittests/dynamic1.c:
	- fix for tests
	* src/tds/data.c: set on_server.column_size correctly
	* include/tds.h src/tds/mem.c:
	- cleanup
	- unset current_results if needed
	* src/tds/tds_checks.c src/tds/tds_checks.h:
	- improved tests

Thu Dec 02 12:28:46 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h include/tdsstring.h src/odbc/connectparams.h:
	* src/odbc/convert_sql2string.h src/odbc/convert_tds2sql.h:
	* src/odbc/odbc_checks.h src/odbc/odbc_util.h:
	* src/odbc/prepare_query.h src/odbc/sql2tds.h:
	- change $Id to comment inside code

Thu Dec  2 01:19:30 EST 2004	JK Lowden <jklowden@schemamania.org>
	* vms/descrip_mms.template s/msdblib_define/dblib_define/

Wed Dec  1 17:34:40 EST 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/bsqldb.c begin to support other column separators

Wed Dec 01 14:10:10 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/odbc/odbc.c src/odbc/unittests/rebindpar.c:
	* src/tds/Makefile.am src/tds/net.c src/tds/query.c:
	* src/tds/token.c:
	* src/tds/tds_checks.c(added) src/tds/tds_checks.h(added):
	- improve internal structure test to detect more problems

Wed Dec 01 07:21:15 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am: bumped version

Tue Nov 30 22:54:06 EST 2004	JK Lowden <jklowden@schemamania.org>
	* include/dblib.h include/sybdb.h
	* src/dblib/dblib.c src/dblib/rpc.c
	* src/dblib/unittests/dbmorecmds.c
	- handle empty results sets in dbresults

Mon Nov 29 20:18:16 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml document MSDBLIB and SYBDBLIB defines.  

Mon Nov 29  9:41:30 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* doc/api_status.txt: merge

Sun Nov 28 21:41:18 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS TODO: updated
	* configure.in: fix for rc versions and win rc version