@@ -42,7 +42,7 @@
 #include <dmalloc.h>
 #endif
 
-static const char software_version[] = "$Id: tds_checks.c,v 1.2 2004-12-02 12:37:54 freddy77 Exp $";
+static const char software_version[] = "$Id: tds_checks.c,v 1.3 2004-12-02 13:20:44 freddy77 Exp $";
 static const void *const no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 #if ENABLE_EXTRA_CHECKS
@@ -72,15 +72,15 @@ tds_check_tds_extra(const TDSSOCKET * tds)
 	assert(tds->state != TDS_DEAD || TDS_IS_SOCKET_INVALID(tds->s));
 
 	/* test env */
-	tds_check_env_extra(tds->env);
+	tds_check_env_extra(&tds->env);
 
 	/* test buffers and positions */
 	assert(tds->in_pos <= tds->in_len && tds->in_len <= tds->in_buf_max);
 	/* TODO remove blocksize from env and use out_len ?? */
 /*	assert(tds->out_pos <= tds->out_len); */
 /* 	assert(tds->out_len == 0 || tds->out_buf != NULL); */
-	assert(tds->out_pos <= tds->env->block_size);
-	assert(tds->env->block_size == 0 || tds->out_buf != NULL);
+	assert(tds->out_pos <= tds->env.block_size);
+	assert(tds->env.block_size == 0 || tds->out_buf != NULL);
 	assert(tds->in_buf_max == 0 || tds->in_buf != NULL);
 
 	/* test res_info */
